<resources>
    <string name="app_name">EShop</string>
    <string name="sales_icon">Sales</string>
    <string name="contacts_text">Contacts</string>
    <string name="about_text">About as</string>
    <string name="main_text">Main</string>
    <string name="logo_app_1">Courses</string>
    <string name="logo_app_2">App</string>
    <string name="category_games">Games</string>
    <string name="course_start_date">Start date</string>
    <string name="course_level">Level</string>
    <string name="article_java_description">Программа обучения Джава – рассчитана на новичков в данной сфере.
        За программу вы изучите построение графических приложений под ПК,
        разработку веб сайтов на основе Java Spring Boot, изучите построение полноценных
        Андроид приложений и отлично изучите сам язык Джава!</string>
    <string name="article_python_description">Программа рассчитана на новичков, которые хотят изучить
        язык Python и начать разрабатывать программы на этом языке. За программу вы изучите
        разработку консольных, а также графических программ на Python, научитесь создавать простые
        программы с искусственным интеллектом, изучите работу с базами данных, а также построите
        и выгрузите в Интернет несколько веб сайтов, написанных на Django.</string>
    <string name="article_node_description">Программа рассчитана на новичков, которые хотят изучить
        веб программирование и за короткий промежуток времени стать Full Stack разработчиками
        на Node JS. В ходе программы вы изучите множество технологий. Вы изучите теорию и на практике
        научитесь строить полноценные веб сайты, применяя все современные технологии и навыки.</string>
    <string name="article_full_stack_description">Программа рассчитана на новичков, которые хотят
        изучить веб программирование и за короткий промежуток времени начать создавать веб сайты.
        За время программы вы научитесь верстать веб сайты, создавать серверные решения и программировать
        веб сайты различных жанров и сложностей. Вы изучите множество новых понятий, языков программирования
        и технологий.</string>
    <string name="article_unity_description">Программа рассчитана на новичков, которые хотят войти
        в сферу построения игр. За программу вы изучите разработку как 2D, так и 3D игр при помощи
        движка Unity и языка C#. Вы пройдете все этапы построения игр, научитесь работать в Unity,
        писать C# скрипты, добавлять анимацию и рекламу в игры, а также загрузите вашу игру
        в Google Play и App Store.</string>
    <string name="article_back_end_description">Программа Back-end разработчик рассчитана на новичков,
        которые хотят изучить язык PHP, а также построение веб сайтов на стороне сервера.
        За время программы вы изучите язык PHP, научитесь работать с его библиотеками, создадите
        несколько веб сайтов, рассмотрите MVC, ООП, Cron, Curl, принципы и паттерны программирования
        и множество других терминов и понятий.</string>


</resources>