<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginEnd="20dp">

    <androidx.cardview.widget.CardView
        android:id="@+id/articleBg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cardCornerRadius="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:contentPaddingBottom="20dp">

        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="match_parent"

            android:orientation="vertical">

            <ImageView
                android:id="@+id/articleImageView"
                android:contentDescription="@string/app_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/ic_java_2" />

            <TextView
                android:id="@+id/articleTitleTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:fontFamily="@font/montserrat_alternates_bold"
                android:textSize="20sp"
                android:layout_margin="10dp"
                android:textColor="@color/white" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <TextView
                    android:id="@+id/textView1"
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:text="@string/course_start_date"
                    android:fontFamily="@font/montserrat_alternates"
                    android:textSize="14sp"
                    android:layout_margin="10dp"
                    android:textColor="@color/white" />
                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/course_level"
                    android:fontFamily="@font/montserrat_alternates"
                    android:textSize="14sp"
                    android:layout_marginTop="20dp"
                    android:layout_marginStart="30dp"
                    android:textColor="@color/white" />

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <TextView
                    android:id="@+id/articleDateTextView"
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:text="@string/app_name"
                    android:fontFamily="@font/montserrat_alternates_bold"
                    android:textSize="14sp"
                    android:layout_margin="10dp"
                    android:textColor="@color/white" />
                <TextView
                    android:id="@+id/articleLevelTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/app_name"
                    android:fontFamily="@font/montserrat_alternates_bold"
                    android:textSize="14sp"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="30dp"
                    android:textColor="@color/white" />

            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>